chore: getting the controllers working
