# server/src/controllers/users.controller.ts
@@ -1,6 +1,3 @@
-import { inject } from 'inversify'
-
-// src/users/usersController.ts
 import {
   Body,
   Controller,
@@ -14,27 +11,15 @@ import {
 
 import { User } from '../models/user.model'
 import { UsersService, UserCreationParams } from '../services/users.service'
-import {provideSingleton} from "../utils/provideSingleton";
 
-@Route('api/users')
-@provideSingleton(UsersController)
+@Route('users')
 export class UsersController extends Controller {
-  protected usersService: UsersService
-
-  constructor (
-  @inject(UsersService) usersService: UsersService
-  ) {
-    super()
-
-    this.usersService = usersService
-  }
-
   @Get('{userId}')
   public async getUser (
     @Path() userId: number,
       @Query() name?: string
   ): Promise<User> {
-    return this.usersService.get(userId)
+    return new UsersService().get(userId)
   }
 
   @SuccessResponse('201', 'Created') // Custom success response
@@ -43,6 +28,6 @@ export class UsersController extends Controller {
     @Body() requestBody: UserCreationParams
   ): Promise<User> {
     this.setStatus(201) // set return status 201
-    return this.usersService.create(requestBody, requestBody.password)
+    return new UsersService().create(requestBody, requestBody.password)
   }
 }
